Adding an agenda slide to semver

--- a/_presentations/Semantic Versioning.html
+++ b/_presentations/Semantic Versioning.html
@@ -11,6 +11,14 @@ class: center, middle
 
 ---
 
+# Agenda
+
+- What is Semantic Versioning?
+- Why use Semantic Versioning?
+- How to use Semantic Versioning
+
+---
+
 # Semantic & Versioning 
 **Definitions**
 
