--- a/_presentations/Semantic Versioning.html
+++ b/_presentations/Semantic Versioning.html
@@ -199,7 +199,7 @@ A jaunt through this should clear up ambiguities, edge cases, extensions, and th
 
 [bumpversion](https://github.com/peritus/bumpversion)
 
-```console
+```bash
 $ bumpversion [options] part [file]
 ```
 
