--- a/_presentations/docker_for_devs_part1.html
+++ b/_presentations/docker_for_devs_part1.html
@@ -533,7 +533,7 @@ But, how about a real world example to demonstrate these principals in action
 # Intermezzo
 ## Setting this demo up on a play-with-docker instance
 
-```
+```bash
 $ apk add --no-cache python3
 $ git clone https://github.com/bnbalsamo/webclip.git
 $ cd webclip
